--- a/StandardThings.ipynb
+++ b/StandardThings.ipynb
@@ -662,9 +662,7 @@
   {
    "cell_type": "markdown",
    "id": "1d5114e4-d7a7-40e2-9152-0efe5d96b38a",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Machine learning"
    ]
@@ -672,9 +670,7 @@
   {
    "cell_type": "markdown",
    "id": "15d4f90f-f6cf-4ecd-abe1-9f7cc19d3378",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Neural Network"
    ]
@@ -1310,9 +1306,7 @@
   {
    "cell_type": "markdown",
    "id": "5409265e-791a-4218-8a62-3a61bedd927e",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Torch"
    ]
@@ -1391,12 +1385,7 @@
     "\n",
     "x_train, x_test, y_train, y_test = train_test_split(x_data, y_data, test_size=0.3)# Split of 30% to use for testing, the next line splits the validation part.\n",
     "\n",
-    "model = nn.Sequential(\n",
-    "    nn.Linear(1, 12),\n",
-    "    nn.ReLU(),\n",
-    "    nn.Linear(12, 8),\n",
-    "    nn.ReLU(),\n",
-    "    nn.Linear(8, 1))\n",
+    "model = nn.Sequential(nn.Linear(1, 12), nn.ReLU(), nn.Linear(12, 8), nn.ReLU(), nn.Linear(8, 1))\n",
     "\n",
     "### Preparing fit and doing fit\n",
     "loss_function = nn.MSELoss()#https://neptune.ai/blog/pytorch-loss-functions\n",
